--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "csv-parser": "^3.2.0",
+    "dotenv": "^16.5.0",
     "encoding-japanese": "^2.2.0",
     "iconv-lite": "^0.6.3",
     "playwright": "^1.51.1"
